--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Roboto:300,500&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap");
 
 body {
     color: #4f5b60;
@@ -54,8 +54,38 @@ ul {
     margin: 0 1.5rem;
     padding: 0;
     li {
+        color: #72848c;
         &:hover {
+            color: #10b1dc;
             cursor: pointer;
         }
     }
+}
+
+.top-list-item {
+    margin-bottom: 0.3rem;
+}
+
+.order,
+.composer,
+.work {
+    display: inline-block;
+}
+
+.order {
+    font-size: 1.4rem;
+    font-weight: 400;
+    padding-right: 1rem;
+    text-align: right;
+    width: 2rem;
+}
+
+.composer {
+    font-size: 1.4rem;
+    font-weight: 300;
+    margin-right: 0.8rem;
+}
+
+.work {
+    font-weight: 500;
 }
