--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,11 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap");
 
+$main-color: #4f5b60;
+$lighter-color: #72848c;
+$highlight-color: #10b1dc;
+
 body {
-    color: #4f5b60;
+    color: $main-color;
     font-family: "Roboto", sans-serif;
     font-weight: 500;
     font-size: 18px;
@@ -36,11 +40,11 @@ aside {
 }
 
 .selected {
-    color: #10b1dc;
+    color: $highlight-color:;
 }
 
 .list-description {
-    color: #72848c;
+    color: $lighter-color;
     margin-bottom: 0.5rem;
 }
 
@@ -54,9 +58,9 @@ ul {
     margin: 0 1.5rem;
     padding: 0;
     li {
-        color: #72848c;
+        color: $lighter-color;
         &:hover {
-            color: #10b1dc;
+            color: $highlight-color;
             cursor: pointer;
         }
     }
