--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,27 @@
-@import url("https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap");
+@font-face {
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: 300;
+    src: local("Roboto Light"), local("Roboto-Light"),
+        url("/fonts/roboto-v20-latin-300.woff2") format("woff2"),
+        url("/fonts/roboto-v20-latin-300.woff") format("woff");
+}
+@font-face {
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: 400;
+    src: local("Roboto"), local("Roboto-Regular"),
+        url("/fonts/roboto-v20-latin-regular.woff2") format("woff2"),
+        url("/fonts/roboto-v20-latin-regular.woff") format("woff");
+}
+@font-face {
+    font-family: "Roboto";
+    font-style: normal;
+    font-weight: 500;
+    src: local("Roboto Medium"), local("Roboto-Medium"),
+        url("/fonts/roboto-v20-latin-500.woff2") format("woff2"),
+        url("/fonts/roboto-v20-latin-500.woff") format("woff");
+}
 
 $main-color: #4f5b60;
 $lighter-color: #72848c;
