--- a/src/styles/_menu.scss
+++ b/src/styles/_menu.scss
@@ -31,6 +31,10 @@ aside {
                 color: $highlight-color;
                 cursor: pointer;
             }
+
+            &.selected {
+                color: $highlight-color;
+            }
         }
     }
 }
