--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -1,10 +1,27 @@
-h1 {
-    font-size: 1.6rem;
-    margin: 0 0 0.5rem 0;
+h1,
+h2 {
     text-align: center;
 
     @media screen and (min-width: $break-small) {
         margin: 0 0 1rem 0;
         text-align: left;
+    }
+}
+
+h1 {
+    font-size: 1.6rem;
+    margin: 0 0 0.5rem 0;
+
+    @media screen and (min-width: $break-small) {
+        margin: 0 0 1rem 0;
+    }
+}
+
+h2 {
+    font-size: 1.2rem;
+    margin: 0.5rem 0 0.5rem 0;
+
+    @media screen and (min-width: $break-small) {
+        margin: 1.5rem 0 1rem 0;
     }
 }
