Added composers rating page

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -38,6 +38,10 @@
     text-align: right;
 }
 
+.order-wider {
+    min-width: 4rem;
+}
+
 .composer {
     font-size: 1.2rem;
     font-weight: 300;
